# concept-synth

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/abduction/: README.md  release_manifest.json
benchmarks/abduction/analysis/: eval_cache_reader.py  make_tables.py
benchmarks/abduction/data/: abd_combined_v1.yaml.holdout_k5_seed0_delta12.jsonl
benchmarks/abduction/docs/: provenance.md  release_checklist.md  release_contract.md
benchmarks/abduction/eval/: abd_combined_v1_eval_cache.jsonl.meta.json  abd_eval_cache_v1.meta.json
benchmarks/abduction/schemas/: benchmark_record.schema.json  eval_cache_record.schema.json  holdout_record.schema.json  prediction_record.schema.json
benchmarks/abduction/scripts/: rebuild_eval_cache.sh  refresh_release_artifacts.py  reproduce_tables.sh
src/concept_synth/: __init__.py  abd_b1_prompt.py  abd_b1_theory_library.py  abd_b1_z3_checker.py  abd_cli.py  abd_formula_utils.py  benchmark_io.py  bootstrap.py  eval_cache.py  evaluate_abd_b1.py  fo_grounding_z3.py  metrics.py  predicate_format.py  sexpr_parser.py  sexpr_printer.py  signature_utils.py
src/concept_synth/abduction/: __init__.py  abd_b1_prompt.py  abd_b1_z3_checker.py  benchmark_io.py  cli.py  eval_cache.py  evaluate_abd_b1.py
src/concept_synth/fol/: __init__.py  formulas.py
src/concept_synth/prompts/: abd_full_scenario_task.txt  abd_skeptical_scenario_suffix.txt  abd_skeptical_scenario_task.txt
tests/: test_abduction_release_artifacts.py  test_abduction_smoke.py
(+7 files in other folders)
